added tests for @get:NotNull annotations and @param:NotNull annotations also

--- a/pom.xml
+++ b/pom.xml
@@ -54,14 +54,25 @@
             <artifactId>kotlin-test-junit5</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- these dependencies are needed to make the inspection work -->
+        <!-- but they are not needed for the hibernate validator to work -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        <!-- -->
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
